kubernetes/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-agent
  namespace: voice-agent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voice-agent
  template:
    metadata:
      labels:
        app: voice-agent
    spec:
      containers:
        - name: voice-agent
          image: razachis1/voice-agent:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
