kubernetes/voice-agent-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-agent-blue
  namespace: voice-agent
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voice-agent
      role: blue
  template:
    metadata:
      labels:
        app: voice-agent
        role: blue
    spec:
      terminationGracePeriodSeconds: 400
      containers:
        - name: voice-agent
          image: razachis1/voice-agent:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 400"]
